# localforge-mobile

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: android.yml  ios.yml
scripts/: decode-cgbi.cjs  make-app-icon.cjs  patch-android-firebase.cjs  patch-android-manifest.cjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.ios.plist  ios-overrides.xcconfig  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/tauri-plugin-glasstabbar/: Cargo.toml  build.rs
src-tauri/plugins/tauri-plugin-glasstabbar/ios/: Package.swift
src-tauri/plugins/tauri-plugin-glasstabbar/ios/Sources/: GlassTabBarPlugin.swift
src-tauri/plugins/tauri-plugin-glasstabbar/permissions/: default.toml
src-tauri/plugins/tauri-plugin-glasstabbar/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-glasstabbar/permissions/autogenerated/commands/: hide_bar.toml  set_selected.toml  show_bar.toml
src-tauri/plugins/tauri-plugin-glasstabbar/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-glasstabbar/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
src-tauri/plugins/tauri-plugin-iap/: Cargo.toml  build.rs
src-tauri/plugins/tauri-plugin-iap/android/: build.gradle.kts  proguard-rules.pro  settings.gradle
src-tauri/plugins/tauri-plugin-iap/android/src/main/: AndroidManifest.xml
src-tauri/plugins/tauri-plugin-iap/android/src/main/java/gg/localforge/iap/: IapPlugin.kt
src-tauri/plugins/tauri-plugin-iap/guest-js/: index.ts
src-tauri/plugins/tauri-plugin-iap/ios/: Package.swift
src-tauri/plugins/tauri-plugin-iap/ios/Sources/: IapPlugin.swift
src-tauri/plugins/tauri-plugin-iap/permissions/: default.toml
src-tauri/plugins/tauri-plugin-iap/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-iap/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-iap/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
src-tauri/plugins/tauri-plugin-push/: Cargo.toml  DEVICE_SETUP.md  build.rs
src-tauri/plugins/tauri-plugin-push/android/: build.gradle.kts  proguard-rules.pro
src-tauri/plugins/tauri-plugin-push/android/src/main/: AndroidManifest.xml
src-tauri/plugins/tauri-plugin-push/android/src/main/java/gg/localforge/push/: PushPlugin.kt
src-tauri/plugins/tauri-plugin-push/guest-js/: index.ts
src-tauri/plugins/tauri-plugin-push/ios/: Package.swift
src-tauri/plugins/tauri-plugin-push/ios/Sources/: PushPlugin.swift
src-tauri/plugins/tauri-plugin-push/permissions/: default.toml
src-tauri/plugins/tauri-plugin-push/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-push/permissions/autogenerated/commands/: set_quick_actions.toml
src-tauri/plugins/tauri-plugin-push/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-push/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
src-tauri/plugins/tauri-plugin-webauth/: Cargo.toml  build.rs
src-tauri/plugins/tauri-plugin-webauth/android/: build.gradle.kts  proguard-rules.pro
src-tauri/plugins/tauri-plugin-webauth/android/src/main/: AndroidManifest.xml
src-tauri/plugins/tauri-plugin-webauth/android/src/main/java/gg/localforge/webauth/: RedirectActivity.kt  WebauthPlugin.kt
src-tauri/plugins/tauri-plugin-webauth/ios/: Package.swift
src-tauri/plugins/tauri-plugin-webauth/ios/Sources/: WebauthPlugin.swift
src-tauri/plugins/tauri-plugin-webauth/permissions/: default.toml
src-tauri/plugins/tauri-plugin-webauth/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-webauth/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-webauth/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
src-tauri/src/: auth.rs  backup_targets.rs  iap.rs  lib.rs  main.rs  nodes.rs  oauth.rs  orgs.rs  push.rs  relay.rs  sync.rs  vault.rs
src/components/: AcceptInviteBanner.tsx  AccountScreen.tsx  ErrorBoundary.tsx  HomeScreen.tsx  LoginScreen.tsx  MachinesScreen.tsx  ServerBackupsSection.tsx  ServerConfigScreen.tsx  ServerDetailScreen.tsx  ServerListScreen.tsx  ServerSchedulesSection.tsx  SyncKeyDialog.tsx  TabBar.tsx  TeamScreen.tsx
src/lib/: cloud.ts  iap.ts  nativeTabBar.ts  platform.ts  useSwipeBack.ts
