[package]
name = "localforge-mobile"
version = "0.3.5"
description = "LocalForge mobile companion — iOS + Android"
authors = ["Fabrizio"]
edition = "2021"
license-file = "../LICENSE"

# Mobile builds want both a staticlib (Android NDK links it) and a
# cdylib (iOS dynamic loader). `rlib` lets `main.rs` still produce a
# desktop binary for local web-only iteration.
[lib]
name = "localforge_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2", features = [] }

# Cross-platform deep-link plugin — receives the cloud OAuth callback.
# Mobile flavour registers an Android intent filter + iOS URL scheme
# entry; both fire `tauri::Manager::on_deep_link` on arrival.
tauri-plugin-deep-link = "2"
# Opens URLs in the user's default browser. Needed by the OAuth flow:
# `cloud_oauth_start` launches the system browser pointed at the
# cloud's /v1/auth/<provider>/start URL, the user signs in there, the
# cloud 302s back to localforge://auth/callback?token=…, the OS hands
# that URL back to us via the deep-link plugin.
tauri-plugin-opener = "2"

# In-App Purchase bridge — native StoreKit (iOS) / Play Billing
# (Android). Local plugin: the Rust side is a thin command surface, the
# real purchase flow runs in the bundled Swift/Kotlin. Desktop preview
# builds get a stub that returns `unsupported`. The receipt handle it
# returns is verified by `crate::iap` against the cloud before any plan
# is granted.
tauri-plugin-iap = { path = "plugins/tauri-plugin-iap" }

# In-app OAuth browser — ASWebAuthenticationSession (iOS) / Chrome Custom
# Tabs (Android). Replaces the external-browser + deep-link round-trip
# (which cold-started + crashed the app on Android) with an in-app sheet
# that hands the localforge://auth/callback redirect straight back.
tauri-plugin-webauth = { path = "plugins/tauri-plugin-webauth" }

# Shared crates pulled from the public localforge repo. Cargo walks
# the repo tree at fetch time, finds the Cargo.toml whose package
# name matches, and uses that crate.
#
# Pinned to `main` while everything moves fast. Once the public APIs
# stabilise we'll pin to a tag (e.g. `tag = "v0.2.0-mobile-shared"`)
# so a force-push or breaking change upstream can't ambush a mobile
# release.
localforge-core = { git = "https://github.com/fabri2000779/localforge.git", branch = "main" }
# Platform-agnostic cloud client — auth, OAuth URL building,
# envelope-encryption, audit, billing, orgs, relay WS host. Pulls in
# its own reqwest / aes-gcm / scrypt / etc so we don't have to list
# them here too.
localforge-cloud-client = { git = "https://github.com/fabri2000779/localforge.git", branch = "main" }

# Local-only dependencies: things the mobile uses that the shared
# crates don't transitively expose.
base64 = "0.22"
# WS client for the cloud relay. The full relay state machine isn't
# yet in the shared crate (event sink trait is the next refactor), so
# the mobile builds its own connection loop on top of these primitives
# + the WS URL helper from `localforge_cloud_client::relay`.
tokio-tungstenite = { version = "0.29", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
# Used by the relay's `SinkExt::send` / `StreamExt::next` extension
# methods. Direct dep since tokio-tungstenite re-exports the trait
# objects but not the trait-import path.
futures-util = "0.3"
# Backoff jitter — the reconnect loop wants ±20% randomness. The
# cloud-client transitively brings rand in but Cargo's visibility
# rules don't expose transitive deps, so we list it directly.
rand = "0.9"

# rustls is pulled in transitively (reqwest in the cloud-client + the
# relay WebSocket), both built with a "rustls-no-provider" feature — so
# NO process-default CryptoProvider is installed automatically. We must
# install one at startup (see lib.rs::run) or reqwest's
# `Client::builder().build()` returns Err, the cloud-client's `.expect`
# panics, and (with panic=abort) the app HARD-CRASHES on the first cloud
# call — login, OAuth callback, sync. Direct dep so we can reach
# `rustls::crypto::ring::default_provider()`. `ring` is the most
# reliable rustls provider on iOS/Android.
rustls = { version = "0.23", features = ["ring"] }

# Bundled Mozilla roots for the relay WebSocket's explicit TLS connector
# (see relay.rs). tokio-tungstenite's default `connect_async` TLS path
# fails to establish the WSS connection on iOS — same class of issue as
# reqwest's default verifier — so we hand the relay WS a known-good
# rustls config (webpki roots + ring), exactly like the cloud HTTP client.
webpki-roots = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
# `custom-protocol` is the standard Tauri release-mode feature — it
# replaces the dev `localhost` URL with a `tauri://` scheme so the
# bundled HTML/JS load from the app package, not over the network.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Release profile mirrors the desktop's: small binaries are even more
# important on mobile (App Store + Play Store care about download size).
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
