[package]
name = "tauri-plugin-iap"
version = "0.1.0"
description = "In-App Purchase bridge for LocalForge mobile — StoreKit 2 (iOS) + Play Billing (Android)"
edition = "2021"
rust-version = "1.77.2"
# tauri-plugin's build helper requires `links` to equal the package
# name: it's how Cargo guarantees a single version of the plugin links
# the native iOS/Android side, and how the desktop/mobile cfgs get set.
links = "tauri-plugin-iap"

# A Tauri 2 mobile plugin. The Rust side is a thin command surface; the
# actual purchase flow runs in native code (ios/ Swift, android/ Kotlin)
# because StoreKit / Play Billing aren't reachable from the WebView.
# Desktop builds get a stub that returns `unsupported` — the desktop
# app sells via Stripe, not IAP.

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
